<resources>
    <string name="app_name">San Diego Bus Planner</string>
    <string name="MainTitle_string">Choose the transportation method:</string>
    <string name="ucsd_image_button">ucsd image button</string>
    <string name="MTS_image_button">MTS image button</string>
    <string name="UCSD_title">UCSD</string>
    <string name="ask_string">Choose your current location:</string>
    <string name="Enter_bus_stop">Enter an address:</string>
    <string name="Auto_bus_stop">Use my current location:</string>
    <string name="or">OR</string>
    <string name="UCSD_title_choose">UCSD</string>
    <string name="MTS_title_choose">MTS</string>
    <string name="location">location</string>
    <string name="walk_ask">Choose your walking speed:</string>
    <string name="speed_img">speed_img</string>
    <string name="submit">Submit</string>
    <string name="title_activity_maps">Map</string>

    <string name="google_app_id">1008155422772</string>
</resources>
