<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sd_commute.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/MainTitle"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/UCSD_title_choose"
            android:id="@+id/textView2"
            android:layout_below="@+id/space"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:src="@drawable/mts"
            android:contentDescription="@string/MTS_image_button"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton2"
            android:src="@drawable/ucsd"
            android:contentDescription="@string/ucsd_image_button"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/imageButton"
            android:layout_alignStart="@+id/imageButton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/MTS_title_choose"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/space"
            android:layout_below="@+id/imageButton"
            android:layout_centerHorizontal="true" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_alignRight="@+id/textView"
            android:layout_alignEnd="@+id/textView" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainTitle_string"
        android:id="@+id/MainTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
